# Aurora

./: .gitignore  CORE_VALUE_DESIGN.md  PORTABILITY_IMPROVEMENTS.md  README.md  docker-compose.yml  mcp_config_example.json  pyproject.toml  requirements.txt
aurora_mcp/: __init__.py  config.py  database.py  models.py  server.py
aurora_mcp/services/: embedding.py  query_expander.py  reranker.py  summarizer.py
aurora_mcp/utils/: project_detector.py
aurora_queue/: queue_manager.py  worker.py
aurora_queue/jobs/: batch.py  ingest.py
config/: .env.example  config.yaml
database/migrations/: 001_initial_schema.sql  002_async_jobs.sql  003_add_project_fields.sql  004_add_content_tsv.sql  005_add_brief_summary.sql
docs/: IMPLEMENTATION_HANDBOOK.md  PROJECT_AWARE_SEARCH.md  SEARCH_OPTIMIZATION_PLAN.md
docs/pdca/token-optimization/: do.md  improvement-fallback-logic.md  plan.md
scripts/: backfill_summaries.py  migrate_add_fulltext_search.py  migrate_add_project_fields.py  migrate_namespace.py  setup_db.py  start_dev.py  start_worker.py  test_search.py
tests/: test_enhanced_ingest.py  test_enhanced_search.py  test_hybrid_search.py  test_project_detector.py  test_query_expander.py  test_reranker.py
tests/test_api/: test_health.py  test_ingest.py
